--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,20 @@ button {
 .delete {
     background-color: #dee2ff;
 }
+
+.btns {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.row {
+    width: 312px;
+    display: flex;
+    gap: 10px;
+    flex-grow: 1;
+}
