--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f8edeb;
+    font-family: 'Roboto', sans-serif;
+}
+
+button {
+    cursor: pointer;
 }
 
 .app {
@@ -24,16 +29,6 @@ body {
     border-radius: 10px;
 }
 
-.result {
-    display: flex;
-    width: 312px;
-    height: 96px;
-    background-color: #f7ede2;
-    margin: 20px;
-    border: 2px solid;
-    border-radius: 10px;
-}
-
 .button {
     width: 312px;
     height: 55px;
@@ -48,6 +43,7 @@ button {
     gap: 10px;
     padding: 20px;
     border-radius: 10px;
+    font-weight: lighter;
 }
 
 .clear {
@@ -73,4 +69,24 @@ button {
     display: flex;
     gap: 10px;
     flex-grow: 1;
+}
+
+
+.result {
+    justify-content: flex-end;
+    align-items: center;
+    display: flex;
+    width: 312px;
+    height: 96px;
+    background-color: #f7ede2;
+    margin: 20px;
+    border: 2px solid;
+    border-radius: 10px;
+}
+
+.result-text {
+    margin-right: 15px;
+    display: flex;
+    text-align: end;
+    font-weight: 500;
 }
